# Quicknode_einstarscan

./: CMakeLists.txt  README.md
3rd/: CMakeLists.txt
3rd/plugincore/: CMakeLists.txt  UniMQSocket.cpp  UniMQSocket.h  qn_plugin.cpp  rpcmanager.cpp  rpcmanager.h  zmqmessage.h
3rd/plugincore/include/: log.h  logging.h  zhelpers.h
3rd/plugincore/lib/: plugincore.lib  plugincored.lib
ScannerDemo/: CMakeLists.txt  main.cpp  sn3dmainwindow.cpp  sn3dmainwindow.h  sn3dmainwindow.ui  sn3dmainwindow.ui.autosave
cmake/: AutoSourceGroup.cmake  PluginCoreConfig.cmake  SetConanPackageDir.cmake  uni.cmake
doc/: 先临三维EinScan 10 设备扫描软件SDK用户手册1.5.docx
include/: fifo.h  qn_basicTypes.h  qn_defines.h  qn_errDef.h  qn_errors.h  qn_plugin.h  uniexport.h
lib/: Sn3dE10SDK.lib  librenderkit.lib  librenderkitd.lib  libzmq-v141-mt-4_3_2.lib  sdk_adapter.lib  sn3d_smc.lib
plugins/: CMakeLists.txt
plugins/executable/: CMakeLists.txt
plugins/executable/include/: basenode.h  pluginbussiness.cpp  pluginbussiness.h  plugincorehelper.h
plugins/executable/include/qtlike/: basenode.h  nodesmanager.cpp  nodesmanager.h  pluginapplication.cpp  pluginapplication.h  pluginbussiness.cpp  pluginbussiness.h
plugins/executable/qn_algorithm/: CMakeLists.txt  createuuid.cpp  createuuid.h  main.cpp  qn_algorithm.conf
plugins/executable/qn_einstarscan/: CMakeLists.txt  Canvas.qml  createprocessnode.cpp  createprocessnode.h  form.cpp  form.h  form.ui  increase_update.cpp  increase_update.h  lighthub.cpp  lighthub.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  osgmgr.cpp  osgmgr.h  qml.qrc  qn_einstarscan.conf  ui_mainwindow.h  ui_sn3dcamerwidget.h
plugins/executable/qn_einstarscan/include/: log.h
plugins/executable/qn_einstarscan_qt/: CMakeLists.txt  createuuid.cpp  createuuid.h  hardwareapplication.cpp  hardwareapplication.h  hardwarebasenode.h  main.cpp  pluginbussiness.cpp  pluginbussiness.h  qn_einstarscan.conf
